--- a/main.tex
+++ b/main.tex
@@ -119,7 +119,7 @@ bottom=2cm,%
     \thispagestyle{empty}
     \newpage
 
-    \setcounter{page}{1} %Start the actually document on page 1
+    \setcounter{page}{1} %Start the actual document on page 1
     
     \tableofcontents
     \newpage
@@ -130,5 +130,7 @@ bottom=2cm,%
     \subfile{3.Concurrency}
     \newpage
     \subfile{4.AdditionalTopics}
+    \newpage
+    \subfile{Changelog}
     \newpage
 \end{document}
