Added Further Reading Section

--- a/1.Introduction.tex
+++ b/1.Introduction.tex
@@ -6,7 +6,7 @@
 \subsection{How this script works}
 % Make reference to useful learning materials such as Herlihy, Sophormic Intro and lecture slides/exercises
 As mentioned in the disclaimer, this script is not meant to serve as a replacement for the lecture materials presented during the semester. However, this script does try to summarize the material with complementary exercises and examples. The exercises are inspired by former exam questions, but also include some other questions which might occur. The examples are simply meant to re-enforce the reader's understanding of the topics.\\[3mm]
-This script was heavily inspired by ''The Art of Multiprocessor Programming'' by Maurice Herlihy and Nir Shavit and ''A Sophomoric Introduction to Shared-Memory Parallelism and Concurrency'' by Dan Grossman. Those who are interested in the subject and would like to read more or who feel that this script and the lecture materials didn't manage to cover the subject matter well enough will find these books to be good places to start.
+This script was heavily inspired by ''The Art of Multiprocessor Programming'' by Maurice Herlihy and Nir Shavit and ''A Sophomoric Introduction to Shared-Memory Parallelism and Concurrency'' by Dan Grossman. Those who are interested in the subject and would like to read more or who feel that this script and the lecture materials didn't manage to cover the subject matter well enough will find these books to be good places to start, in addition to the materials provided on the course's webpage.
 
 \subsection{Parallelism vs. Concurrency}
 The lecture and also this script are organized around a fundamental distinction between \textit{concurrency} and \textit{parallelism}. The definitions of these terms are not universal and many people use them differently. Nonetheless, the following definitions are the most generally accepted and making the distinction is important to facilitate discussions on the subject.\\[3mm]
