--- a/main.tex
+++ b/main.tex
@@ -131,6 +131,7 @@ bottom=2cm,%
     \newpage
     \subfile{4.AdditionalTopics}
     \newpage
-    \subfile{Changelog}
+    \subfile{5.Further Reading}
+    \subfile{6.Changelog}
     \newpage
 \end{document}
