--- a/3.Concurrency.tex
+++ b/3.Concurrency.tex
@@ -281,7 +281,7 @@ We now want to go one step further. We wish to create a barrier which blocks all
 \noindent The reusable barrier is implemented in such a way that it can be reused once all waiting threads are released. To simplify our implementation, we assume no additional threads call the \texttt{await()} method before all waiting threads have been released.\\
 The reusable barrier consists of two parts. First, the threads increment the counter, attempt to acquire the \texttt{barrier1} semaphore and go into a blocking state. Once the threshold is reached the \texttt{barrier1} semaphore is incremented so that the threads are allowed to pass the turnstile and enter the second part of the barrier. Additionally, the \texttt{barrier2} semaphore is decremented, thereby making the second part of the barrier behave identically to the first part, only now decreasing the counter. In the second part of the barrier, threads will be allowed to pass the turnstile once the counter's value is 0.\\
 Note that once all threads have exited the barrier, all values have been restored to their original state, thereby allowing the barrier to be reused again.\\[3mm]
-At this point, the reader is encouraged to think about why the different parts are necessary and what could go wrong if we changed anything about them. As an additional exercise, one should try to adapt the \texttt{CyclicBarrier} class such that it allows for threads to start calling the \texttt{await()} method before all threads have exited the barrier.
+At this point, the reader is encouraged to think about why the different parts are necessary and what could go wrong if we changed anything about them. For example, what happens when a thread that has just left the barrier tries to re-enter? Will it overtake the other threads? If not, what prevents it from doing so?
 \begin{figure}[H]
     \centering
     \includegraphics[scale=0.45]{CyclicBarrier.png}
