--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,6 @@
 \documentclass[titlepage, dvipsnames]{article}
 
 \usepackage[%
-a4paper,%
 left=2.5cm,%
 right=2.5cm,%
 top=2cm,%
@@ -20,20 +19,6 @@ bottom=2cm,%
 \usepackage{subfiles}
 \usepackage{wrapfig}
 \usepackage{multicol}
-\usepackage{transparent}
-
-\usepackage[utf8]{inputenc}
-\usepackage[english]{babel}
-
-\usepackage{hyperref}
-\hypersetup{
-    colorlinks=false,
-    linkcolor=blue,
-    filecolor=magenta,      
-    urlcolor=cyan,
-}
-
-\urlstyle{same}
 
 \graphicspath{ {./images/} }
 
@@ -45,7 +30,11 @@ bottom=2cm,%
      #1
      \\
     }
-    
+
+
+\usepackage[utf8]{inputenc}
+\usepackage[german]{babel}
+
 % Theoreme etc.
 \theoremstyle{plain}
 \newmdtheoremenv[
@@ -97,29 +86,23 @@ bottom=2cm,%
     \setlength{\QuestionIndent}{2em}
     
     \makeatletter 
-        \begin{titlepage}
-		\begin{center}
-		\huge \textbf{Parallel Programming \\ PVW Script}
-		\\ \bigskip
-		\Large Last Updated: June, 2020
-		\\ \bigskip
-		\large Author: Lasse Meinen
-		\\ \bigskip
-		\Large pprog-pvw-skript@vis.ethz.ch
-		\vfill
-		{\transparent{0.1}\includegraphics[width = 0.6\textwidth]{images/spirale_black1000x1000.png}}
-		\vfill
-		\end{center}
-
-		\noindent \textbf{Disclaimer:}\\
-		This  script only serves as additional material for practice purposes and should not serve as a substitute for the lecture material. We neither guarantee that this script covers all relevant topics for the exam, nor that it is correct. If an attentive reader finds any mistakes or has any suggestions on how to improve the script, they are encouraged to contact the authors under the
-		indicated email address or, preferably, through a gitlab issue on https://gitlab.ethz.ch/vis/luk/pvw\_script\_pprog.
-	\end{titlepage}
+    \begin{titlepage}
+        \begin{center}
+            \includegraphics[width=0.7\linewidth]{spirale_black1000x1000.png}\\[4ex]
+            \huge \textbf{\@title} \\[2ex] 
+            \Large \textbf{Last updated on 15.06.2019} \\[2ex]
+            \large written by \@author\\[2ex] 
+            \large pprog-pvw-skript@vis.ethz.ch \\[50ex]
+        \end{center}
+    \end{titlepage}
     \makeatother
     \thispagestyle{empty}
     \newpage
 
-    \setcounter{page}{1} %Start the actual document on page 1
+    \subfile{Disclaimer}
+    \newpage
+    
+    \setcounter{page}{1} %Start the actually document on page 1
     
     \tableofcontents
     \newpage
@@ -130,8 +113,5 @@ bottom=2cm,%
     \subfile{3.Concurrency}
     \newpage
     \subfile{4.AdditionalTopics}
-    \newpage
-    \subfile{5.Further Reading}
-    \subfile{6.Changelog}
     \newpage
 \end{document}
